# tb3_coverage_control

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: base.yaml  geometric.yaml  tb3.yaml
launch/: geometric_coverage_control.launch  start_gazebo_world.launch  tb3_cc.launch  tb3_gcc.launch  tb3_pcc.launch  tb3_real.launch  tb3_scc.launch  tb3_sim.launch  vrpn_client.launch
rviz/: tb3.rviz
scripts/: agent_body.py  agent_manager.py  controller.py  odom_to_pose.py  pose_collector.py  pose_stamped_to_pose.py  tf_to_pose.py
src/tb3_coverage_control/: parameters.py  utils.py
urdf/: common_properties.xacro  turtlebot3_burger.gazebo.xacro  turtlebot3_burger.urdf.xacro
worlds/: empty.world
