<?xml version="1.0"?>
<package format="2">
  <name>tb3_coverage_control</name>
  <version>0.0.0</version>
  <description>The tb3_coverage_control package</description>

  <maintainer email="toshiyuki67026@gmail.com">Toshiyuki Oshima</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>

  <depend>geometry_msgs</depend>
  <depend>joy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>turtlebot3</depend>
  <depend>turtlebot3_simulations</depend>
  <depend>visualization_msgs</depend>
  <depend>vrpn_client_ros</depend>
  <depend>gazebo_ros</depend>

</package>
